[package]
name = "coalescing_buffer"
version = "0.1.0"
edition = "2018"
authors = ["Murali Mohan Rath <mmrath@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Coalescing Ring Buffer"
homepage = "https://github.com/mmrath/coalescing_buffer"
keywords = ["coalescing", "ring", "buffer"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[badges]
travis-ci = { repository = "mmrath/coalescing_buffer" }

[lib]
name = "coalescing_buffer"
path = "src/lib.rs"

[[bin]]
name = "coalescing_buffer_main"
path = "src/main.rs"

[dependencies]
crossbeam-utils = "0.6"